antlr4/food-description/FoodDescription.g4
grammar FoodDescription;
foodDescription
  : foodName measurement? ('or' measurement?)?
  ;
  
foodName
    : STRING (COMMA | STRING)*
    ;

measurement
    : quantity unit?
    ;

quantity
  : DECIMAL | FRACTION | WHOLE_NUMBER | WHOLE_NUMBER FRACTION
  ;

unit
  : STRING+
  ;

STRING
   : [a-zA-Z]+ | [0-9][a-zA-Z%]+
   ;

fragment DIGIT : [0-9];
DECIMAL : DIGIT+ '.' DIGIT* | '.' DIGIT+;
FRACTION: DIGIT+ '/' DIGIT+;
WHOLE_NUMBER: DIGIT+;

COMMA : ',' -> channel(HIDDEN) ;

WS
   : [ \t\r\n]+ -> skip
   ;
