gen-src/parser/FoodDescriptionParser.js
// Generated from /Users/lawrencezeng/Projects/diet-diary/antlr4/food-description/FoodDescription.g4 by ANTLR 4.9.2
// jshint ignore: start
import antlr4 from 'antlr4';
import FoodDescriptionListener from './FoodDescriptionListener.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class FoodDescriptionParser extends antlr4.Parser {

    static grammarFileName = "FoodDescription.g4";
    static literalNames = [ null, "'cup'" ];
    static symbolicNames = [ null, null, "STRING", "DIGIT", "WS" ];
    static ruleNames = [ "foodDescription", "foodName", "measurement", "quantity", 
                         "unit" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = FoodDescriptionParser.ruleNames;
        this.literalNames = FoodDescriptionParser.literalNames;
        this.symbolicNames = FoodDescriptionParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	foodDescription() {
	    let localctx = new FoodDescriptionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, FoodDescriptionParser.RULE_foodDescription);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 10;
	        this.foodName();
	        this.state = 12;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===FoodDescriptionParser.DIGIT) {
	            this.state = 11;
	            this.measurement();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	foodName() {
	    let localctx = new FoodNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, FoodDescriptionParser.RULE_foodName);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 14;
	        this.match(FoodDescriptionParser.STRING);
	        this.state = 18;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===FoodDescriptionParser.STRING) {
	            this.state = 15;
	            this.match(FoodDescriptionParser.STRING);
	            this.state = 20;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	measurement() {
	    let localctx = new MeasurementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, FoodDescriptionParser.RULE_measurement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 21;
	        this.quantity();
	        this.state = 22;
	        this.unit();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	quantity() {
	    let localctx = new QuantityContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, FoodDescriptionParser.RULE_quantity);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 25; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 24;
	            this.match(FoodDescriptionParser.DIGIT);
	            this.state = 27; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===FoodDescriptionParser.DIGIT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	unit() {
	    let localctx = new UnitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, FoodDescriptionParser.RULE_unit);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 29;
	        this.match(FoodDescriptionParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

FoodDescriptionParser.EOF = antlr4.Token.EOF;
FoodDescriptionParser.T__0 = 1;
FoodDescriptionParser.STRING = 2;
FoodDescriptionParser.DIGIT = 3;
FoodDescriptionParser.WS = 4;

FoodDescriptionParser.RULE_foodDescription = 0;
FoodDescriptionParser.RULE_foodName = 1;
FoodDescriptionParser.RULE_measurement = 2;
FoodDescriptionParser.RULE_quantity = 3;
FoodDescriptionParser.RULE_unit = 4;

class FoodDescriptionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FoodDescriptionParser.RULE_foodDescription;
    }

	foodName() {
	    return this.getTypedRuleContext(FoodNameContext,0);
	};

	measurement() {
	    return this.getTypedRuleContext(MeasurementContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof FoodDescriptionListener ) {
	        listener.enterFoodDescription(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FoodDescriptionListener ) {
	        listener.exitFoodDescription(this);
		}
	}


}



class FoodNameContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FoodDescriptionParser.RULE_foodName;
    }

	STRING = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(FoodDescriptionParser.STRING);
	    } else {
	        return this.getToken(FoodDescriptionParser.STRING, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof FoodDescriptionListener ) {
	        listener.enterFoodName(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FoodDescriptionListener ) {
	        listener.exitFoodName(this);
		}
	}


}



class MeasurementContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FoodDescriptionParser.RULE_measurement;
    }

	quantity() {
	    return this.getTypedRuleContext(QuantityContext,0);
	};

	unit() {
	    return this.getTypedRuleContext(UnitContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof FoodDescriptionListener ) {
	        listener.enterMeasurement(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FoodDescriptionListener ) {
	        listener.exitMeasurement(this);
		}
	}


}



class QuantityContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FoodDescriptionParser.RULE_quantity;
    }

	DIGIT = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(FoodDescriptionParser.DIGIT);
	    } else {
	        return this.getToken(FoodDescriptionParser.DIGIT, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof FoodDescriptionListener ) {
	        listener.enterQuantity(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FoodDescriptionListener ) {
	        listener.exitQuantity(this);
		}
	}


}



class UnitContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FoodDescriptionParser.RULE_unit;
    }


	enterRule(listener) {
	    if(listener instanceof FoodDescriptionListener ) {
	        listener.enterUnit(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FoodDescriptionListener ) {
	        listener.exitUnit(this);
		}
	}


}




FoodDescriptionParser.FoodDescriptionContext = FoodDescriptionContext; 
FoodDescriptionParser.FoodNameContext = FoodNameContext; 
FoodDescriptionParser.MeasurementContext = MeasurementContext; 
FoodDescriptionParser.QuantityContext = QuantityContext; 
FoodDescriptionParser.UnitContext = UnitContext; 
